[fix] configure listener and publisher